# juststrokes

./: .gitignore  README.md  benchmark_history.txt  benchmark_step2.txt  build.rs  build.sh
.github/workflows/: build-and-release.yml
docs/development/: 01-PROJECT-OVERVIEW.md  02-INITIAL-CONVERSION.md
juststrokes-rust/: Cargo.toml  README.md  benchmark_history.txt  benchmark_results.txt
juststrokes-rust/benches/: matching_bench.rs
juststrokes-rust/docs/development/: 00-INDEX.md  09-TECHNICAL-QA.md  README.md
juststrokes-rust/src/: data.rs  lib.rs  main.rs  socket_service.rs
juststrokes-rust/tests/: debug_test.rs
src/: csv_data.rs  socket_service.rs
tests/: integration_test.rs
